Added functionality for element content

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "athletic-locator",
+   "id": "combined-suite",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "specialized-nomination",
+   "id": "commercial-belgium",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "available-heath",
+   "id": "dressed-matthew",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,8 +73,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "sitting-album",
+   "execution_count": 62,
+   "id": "accredited-saturday",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_content(element):\n",
+    "    \"\"\"\n",
+    "    Get the main content of the element.\n",
+    "    The text should be between quotation marks.\n",
+    "    e.g. \n",
+    "        :div \"I am a content\"\n",
+    "        <div>I am a content</div>\n",
+    "    \"\"\"\n",
+    "    matches = re.search('\"(.*?)\"', element)\n",
+    "    if matches is not None:\n",
+    "        return matches.group(0).replace('\"','')\n",
+    "    return \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "uniform-rider",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,31 +105,26 @@
     "    return \"\"\n",
     "  tabs_count = x[i].count('\\t')\n",
     "  xi = x[i]\n",
-    "  attrs = get_attributes(xi)\n",
-    "  attrs = ' ' + attrs\n",
+    "  attrs = ' ' + get_attributes(xi)\n",
     "  xi = split_tag(x[i])\n",
-    "  \n",
+    "  content = get_content(x[i])\n",
     "  if tabs_count > t or i > len(x):\n",
-    "    h = get_childs(x, i+1, tabs_count, '</'+xi+'>')\n",
-    "    #xi = split_tag(x[i])\n",
-    "    return '<'+xi+attrs+'>' + h + end\n",
+    "    h = get_childs(x, i+1, tabs_count, f\"</{xi}>\")\n",
+    "    return f\"<{xi}{attrs}>{content}{h}{end}\"\n",
     "  elif tabs_count == t:\n",
     "    h = get_childs(x, i+1, tabs_count, end)\n",
-    "    return '<'+xi+attrs+'></'+xi+'>' + h\n",
+    "    return f\"<{xi}{attrs}>{content}</{xi}>{h}\"\n",
     "  elif tabs_count < t:\n",
-    "    if i+1 <= len(x):\n",
-    "      h = get_childs(x, i+1, tabs_count)\n",
-    "    else:\n",
-    "      h = \"\"\n",
-    "    return '<'+xi+attrs+'></'+xi+'>' + end + h\n",
+    "    h = get_childs(x, i+1, tabs_count) if i+1 <= len(x) else \"\"\n",
+    "    return f\"<{xi}{attrs}>{content}</{xi}>{end}{h}\"\n",
     "  else:\n",
     "    return \"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "pressed-collectible",
+   "execution_count": 79,
+   "id": "engaging-kennedy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,8 +140,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "automatic-logistics",
+   "execution_count": 80,
+   "id": "exclusive-casting",
    "metadata": {},
    "outputs": [
     {
@@ -139,8 +155,10 @@
       "  <div class=\"class2\" id=\"keyboard-shortcut\">\n",
       "  </div>\n",
       "  <div>\n",
+      "   I am div content\n",
       "  </div>\n",
       "  <div>\n",
+      "   Another content\n",
       "  </div>\n",
       " </div>\n",
       " <div class=\"form-container\">\n",
@@ -161,8 +179,8 @@
     ":main.vmainClass1.vmainClass2\n",
     "  :div#main-container\n",
     "    :div#keyboard-shortcut.class2\n",
-    "    :div\n",
-    "    :div\n",
+    "    :div \"I am div content\"\n",
+    "    :div \"Another content\"\n",
     "  :div.form-container\n",
     "    :form method=post\n",
     "  :v-icon\n",
@@ -174,7 +192,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "official-editing",
+   "id": "least-attention",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cordless-nomination",
    "metadata": {},
    "outputs": [],
    "source": []
