--- a/src/python/main.ipynb
+++ b/src/python/main.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "combined-suite",
+   "execution_count": 4,
+   "id": "a0617c23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "commercial-belgium",
+   "execution_count": 94,
+   "id": "9df6ab5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,45 +36,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "dressed-matthew",
+   "execution_count": 100,
+   "id": "9863a06f",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_class_id(element, type):\n",
-    "  \"\"\"Returns class or id attribute in proper HTML form\"\"\"\n",
-    "  attr = 'class' if type == '\\.' else 'id'\n",
-    "  matches = re.search(f\"({type}+\\w+\\S+)\", element)\n",
-    "  if matches is not None:\n",
-    "    split_del = '.' if type =='\\.' else type\n",
-    "    attrs = matches.group(0).split(split_del)\n",
-    "    new_element = element.replace(matches.group(0), '')\n",
-    "    return f\"{attr}=\\\"{' '.join(attrs[1:])}\\\"\", new_element\n",
-    "  return None, element\n",
+    "    \"\"\"Returns class or id attribute in proper HTML form\"\"\"\n",
+    "    attr = 'class' if type == '\\.' else 'id'\n",
+    "    matches = re.search(f\"({type}+\\w+\\S+)\", element)\n",
+    "    if matches is not None:\n",
+    "        split_del = '.' if type =='\\.' else type\n",
+    "        attrs = matches.group(0).split(split_del)\n",
+    "        new_element = element.replace(matches.group(0), '')\n",
+    "        return f\"{attr}=\\\"{' '.join(attrs[1:])}\\\"\", new_element\n",
+    "    return None, element\n",
     "\n",
-    "def get_attributes(element):\n",
-    "  \"\"\"\n",
+    "def get_attributes(element: str):\n",
+    "    \"\"\"\n",
     "    Get the attributes of the elements.\n",
     "    1. Get classes\n",
     "    2. Get id\n",
     "    3. Other attrs\n",
-    "  \"\"\"\n",
-    "  combined_attrs = ''\n",
-    "  classes, new_el = get_class_id(element, '\\.')\n",
-    "  id, _ = get_class_id(new_el, '#')\n",
-    "  if classes is not None:\n",
-    "    combined_attrs += classes\n",
-    "  \n",
-    "  if id is not None:\n",
-    "    combined_attrs += id\n",
+    "    \"\"\"\n",
+    "    combined_attrs = ''\n",
+    "    classes, new_el = get_class_id(element, '\\.')\n",
+    "    id, _ = get_class_id(new_el, '#')\n",
     "\n",
-    "  return combined_attrs"
+    "    if classes is not None:\n",
+    "        combined_attrs += classes\n",
+    "\n",
+    "    if id is not None:\n",
+    "        combined_attrs += id\n",
+    "\n",
+    "    if '(' in element:\n",
+    "        combined_attrs += element[element.find('(')+1:element.rfind(')')]\n",
+    "\n",
+    "    return combined_attrs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "accredited-saturday",
+   "execution_count": 101,
+   "id": "b2bfecb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,54 +98,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "uniform-rider",
+   "execution_count": 102,
+   "id": "d1133619",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_childs(x, i, t, end=\"\"):\n",
-    "  \"\"\"Recursive function that gets the child elements from a starting position\"\"\"\n",
-    "  if i >= len(x):\n",
+    "def get_childs(pcml: list, i: int, t: int, end=\"\") -> str:\n",
+    "  \"\"\"\n",
+    "  Recursive function that gets the child elements from a starting position\n",
+    "  i = ith element\n",
+    "  \"\"\"\n",
+    "  if i >= len(pcml):\n",
     "    return \"\"\n",
-    "  tabs_count = x[i].count('\\t')\n",
-    "  xi = x[i]\n",
-    "  attrs = ' ' + get_attributes(xi)\n",
-    "  xi = split_tag(x[i])\n",
-    "  content = get_content(x[i])\n",
-    "  if tabs_count > t or i > len(x):\n",
-    "    h = get_childs(x, i+1, tabs_count, f\"</{xi}>\")\n",
-    "    return f\"<{xi}{attrs}>{content}{h}{end}\"\n",
+    "\n",
+    "  tabs_count = pcml[i].count('\\t')\n",
+    "  attrs = get_attributes(pcml[i])\n",
+    "  attrs = '' if attrs == '' else ' ' + attrs\n",
+    "  tag = split_tag(pcml[i]) # element tag, e.g. div\n",
+    "  content = get_content(pcml[i]) # content of the element\n",
+    "\n",
+    "  if tabs_count > t or i > len(pcml):\n",
+    "    h = get_childs(pcml, i+1, tabs_count, f\"</{tag}>\")\n",
+    "    return f\"<{tag}{attrs}>{content}{h}{end}\"\n",
     "  elif tabs_count == t:\n",
-    "    h = get_childs(x, i+1, tabs_count, end)\n",
-    "    return f\"<{xi}{attrs}>{content}</{xi}>{h}\"\n",
+    "    h = get_childs(pcml, i+1, tabs_count, end)\n",
+    "    return f\"<{tag}{attrs}>{content}</{tag}>{h}\"\n",
     "  elif tabs_count < t:\n",
-    "    h = get_childs(x, i+1, tabs_count) if i+1 <= len(x) else \"\"\n",
-    "    return f\"<{xi}{attrs}>{content}</{xi}>{end}{h}\"\n",
+    "    h = get_childs(pcml, i+1, tabs_count) if i+1 <= len(pcml) else \"\"\n",
+    "    return f\"<{tag}{attrs}>{content}</{tag}>{end}{h}\"\n",
     "  else:\n",
     "    return \"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "engaging-kennedy",
+   "execution_count": 95,
+   "id": "0b025f05",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def init_string(string):\n",
-    "  string = string.replace('  ', '\\t')\n",
-    "  string = string.split(':')\n",
-    "  return string\n",
+    "def tokenise(pcml: str) -> list:\n",
+    "    return pcml.replace('  ', '\\t').split(':')\n",
     "\n",
-    "def get_pretty_html(string):\n",
-    "  pcml = get_childs(init_string(string), 1, 0)\n",
-    "  return BeautifulSoup(pcml, 'html.parser').prettify()"
+    "def get_pretty_html(pcml: str) -> str:\n",
+    "    pcml = get_childs(tokenise(pcml), 1, 0)\n",
+    "    return BeautifulSoup(pcml, 'html.parser').prettify()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "exclusive-casting",
+   "execution_count": 98,
+   "id": "50aa118a",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +157,8 @@
      "text": [
       "<div>\n",
       "</div>\n",
-      "<main class=\"vmainClass1 vmainClass2\">\n",
+      "<main class=\"vmainClass1 vmainClass2\" outlined=\"\" type=\"input\">\n",
+      " input\n",
       " <div id=\"main-container\">\n",
       "  <div class=\"class2\" id=\"keyboard-shortcut\">\n",
       "  </div>\n",
@@ -176,7 +184,7 @@
    "source": [
     "test_string = '''\n",
     ":div\n",
-    ":main.vmainClass1.vmainClass2\n",
+    ":main.vmainClass1.vmainClass2 (type=\"input\" outlined)\n",
     "  :div#main-container\n",
     "    :div#keyboard-shortcut.class2\n",
     "    :div \"I am div content\"\n",
@@ -191,8 +199,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 99,
+   "id": "7ca888bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<div class=\"vmain\" hello=\"\" outlined=\"\">\n",
+      " <div>\n",
+      "  No\n",
+      " </div>\n",
+      " <span>\n",
+      "  Hello\n",
+      " </span>\n",
+      "</div>\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_string = '''\n",
+    ":div.vmain (outlined hello)\n",
+    "    :div \"No\"\n",
+    "    :span \"Hello\"'''\n",
+    "\n",
+    "print(get_pretty_html(test_string))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "least-attention",
+   "id": "69e5a057",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -200,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cordless-nomination",
+   "id": "e1213abd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -222,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
